--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"><title>In the Burgh</title><link rel="shortcut icon" href="/favicon.ico"><link rel="alternate" type="application/rss+xml" title="In the BurghRSS Feed" href="/blog/rss.xml"><link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"><link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lekton"><link rel="stylesheet" href="/main.css"><link rel="stylesheet" href="/swiper.css"><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script><script src="swiper.js"></script><!--[if lt IE 9]><script src="/js/html5shiv.js"></script><![endif]--></head><body class="page-index index"><header class="masthead"><h1>In the Burgh</h1><h3>Experiments in flatness</h3><div class="swiper-container"><div class="swiper-wrapper"><div class="swiper-slide"><div class="content-slide"><p>Text for one here</p></div></div><div class="swiper-slide"><div class="content-slide"><p>Text for two here</p></div></div></div></div></header><script src="script.js"></script></body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"><title>In the Burgh</title><link rel="shortcut icon" href="/favicon.ico"><link rel="alternate" type="application/rss+xml" title="In the BurghRSS Feed" href="/blog/rss.xml"><link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"><link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lekton"><link rel="stylesheet" href="/main.css"><link rel="stylesheet" href="/swiper.css"><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script><script src="swiper.js"></script><!--[if lt IE 9]><script src="/js/html5shiv.js"></script><![endif]--></head><body class="page-index index"><header class="masthead"><h1>In the Burgh</h1><h3>Experiments in flatness</h3><div class="swiper-container"><div class="swiper-wrapper"><div class="swiper-slide"><div class="content-slide"><p>Text for one here</p></div></div><div class="swiper-slide"><div class="content-slide"><p>Text for two here</p></div></div></div></div><script>var mySwiper = new Swiper('.swiper-container',{
+    pagination: '.pagination',
+    loop:true,
+    grabCursor: true,
+    paginationClickable: true
+})
+  $('.arrow-left').on('click', function(e){
+    e.preventDefault()
+    mySwiper.swipePrev()
+  })
+  $('.arrow-right').on('click', function(e){
+    e.preventDefault()
+    mySwiper.swipeNext()
+  })</script></header></body></html>
