--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
 
 <script>
 var mySwiper = new Swiper('.swiper-container',{
-    pagination: '.pagination',
     loop:true,
-    grabCursor: true,
-    paginationClickable: true
+    grabCursor: true
 })
   $('.arrow-left').on('click', function(e){
     e.preventDefault()
