--- a/index.html
+++ b/index.html
@@ -22,17 +22,8 @@
 
 <script>
 var mySwiper = new Swiper('.swiper-container',{
-    loop:true,
-    grabCursor: true
+    loop:true
 })
-  $('.arrow-left').on('click', function(e){
-    e.preventDefault()
-    mySwiper.swipePrev()
-  })
-  $('.arrow-right').on('click', function(e){
-    e.preventDefault()
-    mySwiper.swipeNext()
-  })
 </script>
 
   </body>
