added device class wrapper

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
    <h1>In the Burgh</h1>
    <h3>Experiments in flatness</h3>
 
-
+<div class="device">
     <a class="arrow-left" href="#"></a>
     <a class="arrow-right" href="#"></a>
-   <div class="swiper-container">
+    <div class="swiper-container">
        <div class="swiper-wrapper">
             <div class="swiper-slide">
                <div class="content-slide">
@@ -22,7 +22,7 @@
             </div>
         </div>
     </div>
-
+</div>
     <div class="pagination"></div>
 
 <script>
