--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     grabCursor: true,
     autoplay: 5000,
     speed: 300,
+    slidesPerView: 'auto'
 })
   $('.arrow-left').on('click', function(e){
     e.preventDefault()
