Auto slidesperview doesn't work - changed to 2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     grabCursor: true,
     autoplay: 5000,
     speed: 300,
-    slidesPerView: 'auto'
+    slidesPerView: 2
 })
   $('.arrow-left').on('click', function(e){
     e.preventDefault()
