--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
     loop:true,
     grabCursor: true,
     autoplay: 5000,
-    speed: 300,
-    slidesPerView: 2
+    speed: 300
 })
   $('.arrow-left').on('click', function(e){
     e.preventDefault()
