Trying out the visibility api

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
     loop:true,
     grabCursor: true,
     autoplay: 5000,
-    speed: 300
+    speed: 300,
+    centeredSlides: true,
+    slidesPerView: 3,
+    watchActiveIndex: true
 })
   $('.arrow-left').on('click', function(e){
     e.preventDefault()
