--- a/index.html
+++ b/index.html
@@ -1,14 +1,255 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"><title>In the Burgh</title><link rel="shortcut icon" href="/favicon.ico"><link rel="alternate" type="application/rss+xml" title="In the BurghRSS Feed" href="/blog/rss.xml"><link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"><link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lekton"><link rel="stylesheet" href="/main.css"><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script><script src="swiper.js"></script><!--[if lt IE 9]><script src="/js/html5shiv.js"></script><![endif]--></head><body class="page-index index"><div class="device"><a href="#" class="arrow-left"></a><a href="#" class="arrow-right"></a><div class="swiper-container"><div class="swiper-wrapper"><div class="swiper-slide"><div style="background: url('/blog/mono.png'); background-size: contain; background-position: center; background-repeat: no-repeat;" class="content-slide"><div class="title"><h5>Mono</h5><p>Watercolour 400 x 400</p></div></div></div><div class="swiper-slide"><div style="background: url('/blog/shuffling-the-pack.png'); background-size: contain; background-position: center; background-repeat: no-repeat;" class="content-slide"><div class="title"><h5>Shuffling the Pack</h5><p>Watercolour 400 x 400</p></div></div></div><div class="swiper-slide"><div style="background: url('/blog/maz.jpg'); background-size: contain; background-position: center; background-repeat: no-repeat;" class="content-slide"><div class="title"><h5>Maz</h5><p>Watercolour 400 x 400</p></div></div></div><div class="swiper-slide"><div style="background: url('/blog/tyrella.jpg'); background-size: contain; background-position: center; background-repeat: no-repeat;" class="content-slide"><div class="title"><h5>Tyrella</h5><p>Watercolour 400 x 400</p></div></div></div></div></div><div class="pagination"></div></div><script>var mySwiper = new Swiper('.swiper-container',{
-    loop:true,
-    grabCursor: true,
-    autoplay: 5000,
-    speed: 600
-})
-  $('.arrow-left').on('click', function(e){
-    e.preventDefault()
-    mySwiper.swipePrev()
-  })
-  $('.arrow-right').on('click', function(e){
-    e.preventDefault()
-    mySwiper.swipeNext()
-  })</script></body></html>
+
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<title>Human Obscura</title>
+
+<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+<style>
+
+
+/* setup styles
+--------------------------------------------- */
+
+body, html {
+  overflow: hidden;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+body {
+  color: white;
+  font: 100% / 1.5 monospace;
+  background-size: cover;
+  background: url('mountains.png') no-repeat, tomato;
+  background-position-y: 100%;
+
+
+}
+
+* {
+  margin:0;
+  padding:0;
+}
+
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+  /* Fade in animation
+  --------------------------------------------- */
+
+  @-webkit-keyframes show {
+    0%   { opacity: 0;}
+    100% { opacity: 1; }
+  }
+  @-moz-keyframes show {
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  @-o-keyframes show {
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  @keyframes show {
+    0%   { opacity: 0;}
+    100% { opacity: 1; }
+  }
+
+  /* Parallax base styles
+  --------------------------------------------- */
+
+  .parallax {
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+    font-size: 200%;
+    -webkit-perspective: 300px;
+    perspective: 300px;
+    -webkit-perspective-origin-x: 100%;
+    perspective-origin-x: 100%;
+  }
+
+  .parallax__group {
+    position: relative;
+    height: 100vh;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    background: rgba(0,0,0,.3);
+  }
+
+  .parallax__layer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    -webkit-transform-origin-x: 100%;
+    transform-origin-x: 100%;
+  }
+
+  .parallax__layer--fore {
+    -webkit-transform: translateZ(90px) scale(.7);
+    transform: translateZ(90px) scale(.7);
+
+  }
+
+  .parallax__layer--back {
+    z-index: 3;
+  }
+
+  .parallax__layer--back img {
+    opacity: .5;
+  }
+
+
+
+   /* centre the content in the parallax layers */
+
+  .title {
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    animation: show 4000ms 1;
+      font-weight: lighter;
+}
+
+  .title h1 {
+    font-family: 'Bangers', monospace;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+  }
+
+  .parallax a {
+    background: white;
+    color: #444;
+    padding: .05em 1em;
+  }
+
+  /* style the groups
+  --------------------------------------------- */
+
+  #group0 {
+    z-index: 5; /* slide over group 2 */
+  }
+
+  /* project and work
+  --------------------------------------------- */
+
+  ul {
+    margin: 0 0 0 0;
+  }
+
+  ul li {
+    display: inline-block;
+    list-style-type: none;
+    font-size: .7em;
+  }
+
+
+/* contact
+--------------------------------------------- */
+
+  .contact {
+    position: fixed;
+    bottom: 10px;
+    right: 3%;
+    z-index: 10000;
+    font-size: 1.15em;
+    font-family: monospace;
+  }
+
+  .contact a {
+    color: white;
+    text-decoration: underline;
+  }
+
+  /* media queries
+  --------------------------------------------- */
+
+  @media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    h1 {
+      font-size: 1.5em;
+    }
+    .parallax {
+      font-size: 125%;
+    }
+    .contact {
+      font-size: .9em;
+      left: 0;
+      right: 0;
+      text-align: center;
+    }
+    ul {
+      margin: 0;
+    }
+}
+
+  @media only screen
+    and (min-device-width: 768px)
+    and (max-device-width: 1024px)
+    and (-webkit-min-device-pixel-ratio: 1) {
+      h1 {
+        font-size: 1.5em;
+      }
+      .parallax {
+        font-size: 125%;
+      }
+  }
+
+
+
+</style>
+</head>
+
+<body>
+
+  <div class="parallax">
+    <div id="group0" class="parallax__group">
+      <div class="parallax__layer parallax__layer--back">
+        <div class="title" >
+          <img src="clouds.png" />
+        </div>
+      </div>
+      <div class="parallax__layer parallax__layer--fore">
+        <div class="title" >
+          <h1>In the burgh</h1>
+          <p>projects + experimentations</p>
+          <ul>
+            <li>
+              <a href="/dementiawords/">
+                #DementiaWords
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="contact">
+    <span>&#8594; contact me via <a href="https://twitter.com/dementiamap" target="_blank">Twitter</a> or
+    <a href="mailto:alastair@alastaircox.com?Subject=Hi%20Alastair" target="_blank">Email</a>
+</span>
+  </div>
+
+
+</body>
+</html>
