--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<title>Human Obscura</title>
+<title>In the burgh</title>
 
 <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 <style>
@@ -124,9 +124,12 @@ body {
     top: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    animation: show 4000ms 1;
       font-weight: lighter;
 }
+  
+  .title h1, .title p, .title ul {
+    animation: show 4000ms 1;
+  }
 
   .title h1 {
     font-family: 'Bangers', monospace;
