--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <title>In the burgh</title>
+<link rel="icon" href="favicon.png">
 
 <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 <style>
